Made Landing component background slightly wider than vw to avoid white space and made App no longer cause load screen on vw update.

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,7 +1,7 @@
 /*Container*/
 #landing-container {
-    width: 100vw;
-    height: 100vh;
+    width: 110vw;
+    height: 110vh;
 }
 
 .color-landing-background {
